--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,10 +36,12 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
+    access_control: 
+        - { path: ^/api/category/all, roles: PUBLIC_ACCESS }
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/user, roles: PUBLIC_ACCESS }
-        - { path: ^/api/quizz, roles: ROLE_USER }
+        - { path: ^/api/quizz, roles: ROLE_ADMIN }
+        - { path: ^/api/category, roles: ROLE_ADMIN }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
